update add cpu attribute

--- a/DASAN/project_system_advisor/inter_bst_proc/Makefile
+++ b/DASAN/project_system_advisor/inter_bst_proc/Makefile
@@ -1,5 +1,5 @@
 all:
-	gcc main.c  my_lib_process.c bst.c method_data.c  -g -o m 
+	gcc main.c  my_lib_process.c bst.c method_data.c lib_get_cpu.c  -g -o m 
 clean:
 	rm -f m *.out
 	rm -rf /log
