update source code for check all warning

--- a/DASAN/bash_script/test/project_test/Makefile
+++ b/DASAN/bash_script/test/project_test/Makefile
@@ -1,7 +1,8 @@
-override FLAGS +=-Wall
+override FLAGS +=
 FILE_IN=main.c
 all:
 	gcc -o t $(FLAGS) $(FILE_IN)
 
-clean:
-	rm -f t
+clean_trash:
+	rm -f output2.txt output2.c
+
