update mouse movement function really

--- a/DASAN/game_ar/app_code/mouse_movement/Makefile
+++ b/DASAN/game_ar/app_code/mouse_movement/Makefile
@@ -1,5 +1,14 @@
-all:
-	gcc main.c my_lib_mouse.c -lXtst -lX11 -o t
+PROJDIR  := .
+BUILD_TARGET  := t
+SRCFILES := $(shell find $(PROJDIR) -type f -name "*.c" )
+OBJFILES := $(patsubst %.c,%.o,$(SRCFILES))
+CFLAGS   := -lXtst -lX11 -lm -g
+CC 	 := gcc
 
+all: $(OBJFILES)
+	$(CC) $(OBJFILES) $(CFLAGS) -o $(BUILD_TARGET)
 clean:
-	rm -f t
+	rm -f $(OBJFILES) $(BUILD_TARGET)
+%.o: %.c 
+	$(CC) -c $< -o $@
+
