update makefile and modify script apply to makefile for more codes

--- a/DASAN/bash_script/test/project_test/Makefile
+++ b/DASAN/bash_script/test/project_test/Makefile
@@ -1,8 +1,13 @@
-override FLAGS +=
-FILE_IN=main.c
-all:
-	gcc -o t $(FLAGS) $(FILE_IN)
+override FLAGS +=-Wall
+FILE_IN=main.c lib.c
+OBJFILES := $(patsubst %.c,%.o,$(FILE_IN))
+
+all: $(OBJFILES)
+	gcc -o t $(FLAGS) $(OBJFILES)
 
 clean_trash:
-	rm -f output2.txt 
+	rm -f output2.txt  *.o
+
+%.o: %.c
+	gcc -c -Wall $< -o $@
 
