update library , makefile , unit test mouse movement

--- a/DASAN/game_ar/app_code/mouse_movement/test/test_movement/Makefile
+++ b/DASAN/game_ar/app_code/mouse_movement/test/test_movement/Makefile
@@ -1,8 +1,8 @@
 PROJDIR  := .
-LIBDIR   :=./lib
+LIBDIR   :=~/working/linux_project/DASAN/game_ar/app_code/mouse_movement/lib
 BUILD_TARGET  := t
 SRCFILES := $(shell find $(LIBDIR) -type f -name "*.c" )
-SRCFILES +=main.c
+SRCFILES +=t_movement.c
 OBJFILES := $(patsubst %.c,%.o,$(SRCFILES))
 CFLAGS   := -lXtst -lX11 -lm -g
 CC 	 := gcc
